2002-12-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmEvent/FvwmEvent.c (main):
	request only the events that have an associated action

2002-11-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmEvent/FvwmEvent.c (handle_config_line):
	simplified code a bit
	(config):
	fixed an off-by-one array access

	* FvwmTaskBar/FvwmTaskBar.c (ProcessMessage):
	Fixed windows using WindowListSkip appearing in the TaskBar

2002-11-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmWinList/FvwmWinList.c (main):
	(ProcessMessage):
	(AdjustWindow):
	do not resize window while shaded; request size change later

	* FvwmIconMan/xmanager.c (resize_manager):
	(draw_manager):
	* FvwmIconMan/FvwmIconMan.c (main):
	* FvwmIconMan/fvwm.c (ProcessMessage):
	(window_shade):
	* FvwmIconMan/FvwmIconMan.h:
	do not resize the manager window while shaded; request size change later

2002-11-28  olicha  <olivier.chapuis@free.fr>

	* FvwmTaskBar/Goodies.c (CreateMailTipWindow):
	* FvwmTaskBar/FvwmTaskBar.c (main):
	(CheckForTip):
	* FvwmTaskBar/Makefile.am:
	FGettextInit and Mark some strings for translation

	* FvwmForm/FvwmForm-Setup.in:
	Mark the strings for translation

2002-11-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmProxy/FvwmProxy.c (LinkAction):
	(parse_options):
	(main):
	cleaned up memory leaks and parsing
	put default actions in a central place

2002-11-24  Jason Weber  <baboon@imonk.com>

	* FvwmProxy/ConfigFvwmProxyDefaults:
	* FvwmProxy/FvwmProxy.c (ProcessMessage):
	Twiddled with icon text placement rules.
	Added programmable Action options for Click1, Click2, ...
	Fixed background clear during internal Next/Prev
		(which we're getting rid of).
	Changed all the *Command options to the Action syntax.
	Added the Circulate command that used core fvwm functions instead
		of internal Next/Prev.
	Commented out lots of code being phased out.
	Added Unmark Action to mirror Mark Action.

	* FvwmProxy/FvwmProxy.1:
	Updated for Action commands and various formatting.
