@@ -1,3 +1,10 @@
+2002-12-01  olicha  <olivier.chapuis@free.fr>
+
+	* FvwmScript/Instructions.c (ChangeIcon):
+	(ChangeForeColor):
+	(ChangeBackColor):
+	Fixed memory leaks
+
 2002-12-01  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmEvent/FvwmEvent.c (main):
